# pineapple

./: .docops.yml  .env.example  .gitignore  FORAppleMCP.md  FORDocOps.md  FORPineapple.md  Optimization.md  README.md  mcp_server.py  pyproject.toml
.github/workflows/: doc-lint.yml
docops/: __init__.py  cli.py  config.py  docc_engine.py  engine.py  models.py  registry.py  suppression.py
docops/checks/: __init__.py  aws_keys.py  base.py  docc_checks.py  formatting.py  passive_voice.py  pii.py  terminology.py
docops/fetchers/: docc_fetcher.py
docops/llm/: client.py  prompts.py
docops/output/: console.py  json_output.py
docops/parsers/: base.py  docc_parser.py  factory.py  markdown_parser.py  mediawiki_parser.py
glossary/: apple.yml  default.yml
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_suppression.py
tests/fixtures/: docc_framework.json  docc_symbol.json  sample_clean.md  sample_violations.md  sample_violations.wiki
tests/integration/: test_docc_live.py
tests/test_checks/: test_aws_keys.py  test_formatting.py  test_passive_voice.py  test_pii.py  test_terminology.py
tests/test_llm/: test_client.py
tests/test_parsers/: test_markdown_parser.py  test_mediawiki_parser.py
